tests/ui/error-codes/E0458.rs
#[link(kind = "wonderful_unicorn")] extern "C" {} //~ ERROR E0458
                                                  //~| ERROR E0459

fn main() {
}
